--- a/app/modules/landing/landing.scss
+++ b/app/modules/landing/landing.scss
@@ -6,7 +6,7 @@
 
 @font-face {
   font-family: 'Duru Sans';
-  src: url("../../assets/fonts/DuruSans-Regular.ttf") format("truetype");
+  src: url("assets/fonts/DuruSans-Regular.ttf") format("truetype");
 }
 
 body,
@@ -55,7 +55,7 @@ h6 {
     text-align: center;
     width: 100%;
     color: #f8f8f8;
-    background-image: url(headerbg.png);
+    background-image: url('modules/landing/headerbg.png');
     background-size: cover;
 }
 
