login-signup working

--- a/app/elaio.css
+++ b/app/elaio.css
@@ -136,6 +136,9 @@ h6 {
   float: right;
   margin-top: 0; }
 
+.signup-form {
+  padding: 10px; }
+
 @media (max-width: 1199px) {
   ul.banner-social-buttons {
     float: left;
