--- a/app/modules/landing/landing.scss
+++ b/app/modules/landing/landing.scss
@@ -172,6 +172,10 @@ h6 {
     margin-top: 0;
 }
 
+.signup-form {
+    padding: 10px;
+}
+
 @media(max-width:1199px) {
     ul.banner-social-buttons {
         float: left;
