--- a/app/elaio.scss
+++ b/app/elaio.scss
@@ -1,2 +1,9 @@
+@import 'assets/fonts/font-awesome/scss/font-awesome';
+
+@import 'modules/themes/variables';
 
 @import 'modules/landing/landing';
+@import 'modules/dashboard/dashboard';
+
+@import 'components/sidebar/sidebar';
+
