--- a/app/components/footer/footer.html
+++ b/app/components/footer/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="footer">
     <section class="container">
         <section class="row">
             <section class="col-lg-12">
