--- a/app/elaio.scss
+++ b/app/elaio.scss
@@ -1,9 +1,13 @@
 @import 'assets/fonts/font-awesome/scss/font-awesome';
 
 @import 'modules/themes/variables';
-
+@import 'modules/themes/darkly/mixins';
+@import 'modules/themes/darkly/variables';
+@import 'modules/themes/darkly/bootswatch';
 @import 'modules/landing/landing';
 @import 'modules/dashboard/dashboard';
 
+@import 'components/general/general';
 @import 'components/sidebar/sidebar';
+@import 'components/footer/footer';
 
