--- a/app/components/footer/footer.html
+++ b/app/components/footer/footer.html
@@ -4,26 +4,26 @@
             <section class="col-lg-12">
                 <ul class="list-inline">
                     <li>
-                        <a href="#">Principal</a>
+                        <a href="#">Main</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#about">Sobre Elaio</a>
+                        <a href="#about">About Elaio</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#services">Promociónate</a>
+                        <a href="#services">Services</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#contact">Contacto</a>
+                        <a href="#contact">Contact</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#contact">Aviso legal</a>
+                        <a href="#contact">Legal</a>
                     </li>
                 </ul>
-                <p class="copyright text-muted small">Copyright &copy; Elaio 2016. Todos los derechos reservados</p>
+                <p class="copyright text-muted small">Copyright &copy; Elaio 2016. All rights reserved</p>
             </section>
         </section>
     </section>
