--- a/app/elaio.css
+++ b/app/elaio.css
@@ -2188,3 +2188,11 @@ table.dataTable thead .sorting:after {
 
 .modal-content {
   border-radius: 10px; }
+
+.inputfile {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1; }
