--- a/app/elaio.scss
+++ b/app/elaio.scss
@@ -11,4 +11,4 @@
 @import 'components/sidebar/sidebar';
 @import 'components/footer/footer';
 @import 'components/modal/modal';
-
+@import 'components/uploadfile/uploadfile';
