--- a/app/modules/landing/landing.scss
+++ b/app/modules/landing/landing.scss
@@ -55,7 +55,7 @@ h6 {
     text-align: center;
     width: 100%;
     color: #f8f8f8;
-    background-image: url('modules/landing/headerbg.png');
+    background-image: url('modules/landing/headerbg.jpg');
     background-size: cover;
 }
 
