--- a/app/elaio.css
+++ b/app/elaio.css
@@ -1720,7 +1720,7 @@ h6 {
   text-align: center;
   width: 100%;
   color: #f8f8f8;
-  background-image: url("modules/landing/headerbg.png");
+  background-image: url("modules/landing/headerbg.jpg");
   background-size: cover; }
 
 .intro-header > .container {
